--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>WildLife Strikes</title>
         <link rel="stylesheet" href="css/typeahead.css">
         <link rel="stylesheet" href="css/viz.css">
-        <link href='http://fonts.googleapis.com/css?family=Gudea' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Gudea' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
