--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>WildLife Strikes</title>
+        <title>Aircraft Strikes</title>
         <link rel="stylesheet" href="css/typeahead.css">
         <link rel="stylesheet" href="css/viz.css">
         <link href='https://fonts.googleapis.com/css?family=Gudea' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
 
         <div class="container">
 
-            <h1>Information Visualization of Airplane Strikes</h1>
+            <h1>Data Visualization for Aircraft Strikes</h1>
 
             <div class="overlay">
                 <input id="dep" type="text" placeholder="Look up an airport" disabled class="dep typeahead">
