include css for content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
         <!-- --for top navigation bar -->
         <link rel="stylesheet" href="css/topnavbar.css">
-        
+        <!-- --for content containers -->
+        <link rel="stylesheet" href="css/content.css">
+
     </head>
     <body>
         <!-- html top navigation bar BEGIN -->
@@ -108,18 +110,14 @@
             </div>
 
         </div>
-        <div id="descr1" class="content-div"
-        style="margin: 1em auto; padding: 1em; height: 50px;">
-            <h1>Description </h1></div>
-        <div id="data2" class="content-div"
-        style="margin: 1em auto; padding: 1em; height: 50px;">
-            <h1>Data </h1></div>
-        <div id="lib3" class="content-div"
-        style="margin: 1em auto; padding: 1em; height: 50px;">
-            <h1>Libraries </h1></div>
-        <div id="about4" class="content-div"
-        style="margin: 1em auto; padding: 1em; height: 50px;">
-            <h1>About </h1></div>
+        <div id="descr1" class="content-div" >
+            <h1>Description</h1></div>
+        <div id="data2" class="content-div" >
+            <h1>Data</h1></div>
+        <div id="lib3" class="content-div">
+            <h1>Libraries</h1></div>
+        <div id="about4" class="content-div">
+            <h1>About</h1></div>
         </div>
         
         <script src="//d3js.org/d3.v3.min.js"></script>
