add description text

--- a/index.html
+++ b/index.html
@@ -112,6 +112,39 @@
         </div>
         <div id="content-description" class="content-div" >
             <h1>Description</h1>
+            <p>
+                The visualization allows you to view the distribution of strike events across 
+                bird species, months, years for a specified airport.
+            </p>
+            <p>
+                Type something in the textbox and a dropdown will appear suggesting airports.
+            </p>
+            <p>
+                Choose one and charts (three bar graphs and a pie chart) will appear and the map 
+                will show a circle representing the airport location.
+            </p>
+            <p>
+                For the selected airport, the bar graphs show the distribution of strike counts across 
+                various dimensions. The strike counts are shown distributed across bird species, year
+                and month. The pie chart shows the proportion of events for the top five bird species.
+                The circle on the map shows the location.
+            </p>
+            <p>
+                Hover over the circle to see information on the airport, and the number of incidents
+                and the total cost of repairs for all the strike events. For the first bar chart, 
+                hover over each bar and the tooltip will indicate the species and the number of 
+                strikes.
+            </p>
+            <p>
+                For the second and third bar charts, the mouse icon shows a crosshairs (like a 
+                large + sign). Use it to select some bars (in effect selecting some data and filtering
+                out the rest). The charts will update, filtering out the corresponding
+                unselected data.
+            </p>
+            <p>
+                The pie chart shows the proportion of events for the top five species. It can be 
+                similarly used to selectively filter by clicking on the sectors.
+            </p>
         </div>
         <div id="content-data" class="content-div" >
             <h1>Data</h1></div>
