add images to description

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     x.className = "topnavbar";
                 }
             }
+            f1('b0');
         </script>
         <!-- html top navigation bar END -->
 
@@ -117,11 +118,35 @@
                 bird species, months, years for a specified airport.
             </p>
             <p>
+                <a href="./preview/img1.png" target="_blank">
+                    <img src="./preview/img1.png" 
+                      alt="preview" style="max-width:100%;">
+                </a>
+            </p>
+            <p>
                 Type something in the textbox and a dropdown will appear suggesting airports.
             </p>
             <p>
                 Choose one and charts (three bar graphs and a pie chart) will appear and the map 
                 will show a circle representing the airport location.
+            </p>
+            <p>
+                <a href="./preview/img2.png" target="_blank">
+                    <img src="./preview/img2.png" 
+                        alt="preview" style="max-width:100%;">
+                </a>
+            </p>
+            <p>
+                <a href="./preview/img3.png" target="_blank">
+                    <img src="./preview/img3.png" 
+                        alt="preview" style="max-width:100%;">
+                </a>
+            </p>
+            <p>
+                <a href="./preview/img4.png" target="_blank">
+                    <img src="./preview/img4.png" 
+                      alt="preview" style="max-width:100%;">
+                </a>
             </p>
             <p>
                 For the selected airport, the bar graphs show the distribution of strike counts across 
