--- a/index.html
+++ b/index.html
@@ -172,7 +172,15 @@
             </p>
         </div>
         <div id="content-data" class="content-div" >
-            <h1>Data</h1></div>
+            <h1>Data</h1>
+            <p>
+                The dataset used was obtained from the FAA Wildlife Strike DataBase `http://wildlife.faa.gov/`.
+            </p> <p>
+                Some filtering and processing was done on the dataset.
+            </p><p>
+                Airport geographical data was used to illustrate the airport on the map.                    
+            </p>
+        </div>
         <div id="content-libraries" class="content-div">
             <h1>Libraries</h1></div>
         <div id="content-about" class="content-div">
