add libraries description

--- a/index.html
+++ b/index.html
@@ -182,7 +182,35 @@
             </p>
         </div>
         <div id="content-libraries" class="content-div">
-            <h1>Libraries</h1></div>
+            <h1>Libraries</h1>
+            <p>
+            The application is principally built using `dc.js`, `D3.js`, and `DataMaps`.
+        </p><p>
+            _Dc.js_ (Dimensional Charting) is a charting library used together with _D3.js_ to create the bar graphs and pie chart.
+            The linking of the data is accomplished using `Crossfilter`, a library used for grouping and quick addition and removal of data groups.
+            _DataMaps_ is used to draw SVG image of USA map with labels. It is a customizable SVG map graphic for the web in a single Javascript file that works with D3.js.
+
+        </p><p>
+            >More about dc.js and Crossfilter.js:
+        </p><p>
+            >dc.js is a javascript charting library with native Crossfilter support, allowing highly efficient exploration on large multi-dimensional datasets. It leverages D3 to render charts in CSS-friendly SVG format.
+        </p><p>
+            >Charts rendered using dc.js are data driven and reactive and provide instant feedback to user interaction. In dc.js, each chart displays an aggregation of some attributes through the position, size, and color of its elements, and also presents a dimension which can be filtered. When the filter or brush changes, all other charts are updated dynamically, using animated transitions. dc.js combines the analytics power of Crossfilter with the charting power of D3.js.
+        </p><p>
+            >More about Crossfilter - `fast multidimensional filtering for coordinated views`
+        </p><p>
+            >Crossfilter is a JavaScript library for exploring large multivariate datasets in the browser, allowing multidimensional filtering and aggregation of tabular data. In other words, it allows the user to slice and dice row-based data.
+        </p><p>
+            Other supporting libraries used include `typeahead.js`, `underScore.js`, `TopoJSON`, 
+            and `JQuery`.
+        </p><p>
+            >_Typeahead.js_ is a jQuery autocomplete library.
+        </p><p>
+            >[_Underscore.js_](`http://underscorejs.org/`) is a JavaScript library that provides useful functional programming helpers without extending any built-in objects.
+        </p><p>
+            >_TopoJSON_ is an open standard format for representing geographical features and encodes geospatial topology.
+        </p>            
+        </div>
         <div id="content-about" class="content-div">
             <h1>About</h1></div>
         </div>
